kubernetes/app3-static-site/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: app3-static
  namespace: app3
spec:
  selector:
    app: app3-static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
