kubernetes/app3-static-site/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
  namespace: app3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app3(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: app3-static
            port:
              number: 80
